// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectableCardField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] .emotion-5,
.emotion-2[data-has-label='true'] .eqr7bqq1 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-7[aria-disabled='false'],
.emotion-7[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #e5dbfd;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffd3e3;
}

.emotion-7[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-7[aria-disabled='true']>label,
.emotion-7[aria-disabled='true'] .emotion-10 {
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 .emotion-14 {
  fill: #f3f3f4;
}

.emotion-7[data-checked='true'] {
  color: #641cb3;
}

.emotion-7[data-error='true'] {
  color: #b3144d;
}

.emotion-7[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-7 input+svg {
  display: none;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 {
  fill: #d9dadd;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 {
  background: none;
  fill: #8c40ef;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-9 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-9+.emotion-12 .emotion-16 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9:checked+svg .emotion-16 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-9:checked[aria-disabled='false'][aria-invalid='false']+.emotion-12 {
  fill: #8c40ef;
}

.emotion-9:checked[aria-disabled='true'][aria-invalid='false']+.emotion-12 {
  fill: #d8c5fc;
}

.emotion-9[aria-invalid='true']:not([aria-disabled='true'])+.emotion-12 {
  fill: #e51963;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #f1eefc;
}

.emotion-9[aria-disabled='false']:focus-visible+.emotion-12 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 .emotion-14 {
  fill: #ffebf2;
}

.emotion-11 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-11 .emotion-14 {
  fill: #ffffff;
}

.emotion-18 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-20[data-has-label='true'] {
  padding-left: 2rem;
}

.emotion-20[data-has-label='false'] {
  display: contents;
}

.emotion-20[data-has-default-cursor='true'] {
  cursor: default;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
        data-checked="false"
        data-disabled="false"
        data-error="false"
        data-has-default-cursor="false"
        data-has-label="true"
        data-image="none"
        data-type="radio"
        role="button"
        tabindex="0"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            aria-disabled="false"
            class="emotion-6 emotion-7 emotion-8"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              class="emotion-9 emotion-10"
              id="«r1»"
              name="test"
              tabindex="-1"
              type="radio"
              value="test"
            />
            <svg
              class="emotion-11 emotion-12"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="emotion-13 emotion-14"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="emotion-15 emotion-16"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="emotion-17 emotion-18 emotion-19"
              for="«r1»"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="emotion-20 emotion-21"
          data-has-default-cursor="false"
          data-has-label="false"
        >
          Radio field
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectableCardField > should render correctly checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] .emotion-5,
.emotion-2[data-has-label='true'] .eqr7bqq1 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-7[aria-disabled='false'],
.emotion-7[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #e5dbfd;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffd3e3;
}

.emotion-7[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-7[aria-disabled='true']>label,
.emotion-7[aria-disabled='true'] .emotion-10 {
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 .emotion-14 {
  fill: #f3f3f4;
}

.emotion-7[data-checked='true'] {
  color: #641cb3;
}

.emotion-7[data-error='true'] {
  color: #b3144d;
}

.emotion-7[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-7 input+svg {
  display: none;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 {
  fill: #d9dadd;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 {
  background: none;
  fill: #8c40ef;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-9 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-9+.emotion-12 .emotion-16 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9:checked+svg .emotion-16 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-9:checked[aria-disabled='false'][aria-invalid='false']+.emotion-12 {
  fill: #8c40ef;
}

.emotion-9:checked[aria-disabled='true'][aria-invalid='false']+.emotion-12 {
  fill: #d8c5fc;
}

.emotion-9[aria-invalid='true']:not([aria-disabled='true'])+.emotion-12 {
  fill: #e51963;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #f1eefc;
}

.emotion-9[aria-disabled='false']:focus-visible+.emotion-12 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 .emotion-14 {
  fill: #ffebf2;
}

.emotion-11 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-11 .emotion-14 {
  fill: #ffffff;
}

.emotion-18 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-20[data-has-label='true'] {
  padding-left: 2rem;
}

.emotion-20[data-has-label='false'] {
  display: contents;
}

.emotion-20[data-has-default-cursor='true'] {
  cursor: default;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-has-default-cursor="false"
        data-has-label="true"
        data-image="none"
        data-type="radio"
        role="button"
        tabindex="0"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            aria-disabled="false"
            class="emotion-6 emotion-7 emotion-8"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              checked=""
              class="emotion-9 emotion-10"
              id="«r9»"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="emotion-11 emotion-12"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="emotion-13 emotion-14"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="emotion-15 emotion-16"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="emotion-17 emotion-18 emotion-19"
              for="«r9»"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="emotion-20 emotion-21"
          data-has-default-cursor="false"
          data-has-label="false"
        >
          Radio field checked
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectableCardField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] .emotion-5,
.emotion-2[data-has-label='true'] .eqr7bqq1 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-7[aria-disabled='false'],
.emotion-7[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #e5dbfd;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffd3e3;
}

.emotion-7[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-7[aria-disabled='true']>label,
.emotion-7[aria-disabled='true'] .emotion-10 {
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 .emotion-14 {
  fill: #f3f3f4;
}

.emotion-7[data-checked='true'] {
  color: #641cb3;
}

.emotion-7[data-error='true'] {
  color: #b3144d;
}

.emotion-7[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-7 input+svg {
  display: none;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 {
  fill: #d9dadd;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 {
  background: none;
  fill: #8c40ef;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-9 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-9+.emotion-12 .emotion-16 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9:checked+svg .emotion-16 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-9:checked[aria-disabled='false'][aria-invalid='false']+.emotion-12 {
  fill: #8c40ef;
}

.emotion-9:checked[aria-disabled='true'][aria-invalid='false']+.emotion-12 {
  fill: #d8c5fc;
}

.emotion-9[aria-invalid='true']:not([aria-disabled='true'])+.emotion-12 {
  fill: #e51963;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #f1eefc;
}

.emotion-9[aria-disabled='false']:focus-visible+.emotion-12 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 .emotion-14 {
  fill: #ffebf2;
}

.emotion-11 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-11 .emotion-14 {
  fill: #ffffff;
}

.emotion-18 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-20[data-has-label='true'] {
  padding-left: 2rem;
}

.emotion-20[data-has-label='false'] {
  display: contents;
}

.emotion-20[data-has-default-cursor='true'] {
  cursor: default;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
        data-checked="false"
        data-disabled="true"
        data-error="false"
        data-has-default-cursor="false"
        data-has-label="true"
        data-image="none"
        data-type="radio"
        role="button"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            aria-disabled="true"
            class="emotion-6 emotion-7 emotion-8"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-disabled="true"
              aria-invalid="false"
              class="emotion-9 emotion-10"
              disabled=""
              id="«r5»"
              name="test"
              tabindex="-1"
              type="radio"
              value="disabled"
            />
            <svg
              class="emotion-11 emotion-12"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="emotion-13 emotion-14"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="emotion-15 emotion-16"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="emotion-17 emotion-18 emotion-19"
              for="«r5»"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="emotion-20 emotion-21"
          data-has-default-cursor="false"
          data-has-label="false"
        >
          Radio field disabled
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectableCardField > should render correctly with errors 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] .emotion-5,
.emotion-2[data-has-label='true'] .eqr7bqq1 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-7[aria-disabled='false'],
.emotion-7[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #e5dbfd;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffd3e3;
}

.emotion-7[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-7[aria-disabled='true']>label,
.emotion-7[aria-disabled='true'] .emotion-10 {
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 .emotion-14 {
  fill: #f3f3f4;
}

.emotion-7[data-checked='true'] {
  color: #641cb3;
}

.emotion-7[data-error='true'] {
  color: #b3144d;
}

.emotion-7[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-7 input+svg {
  display: none;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 {
  fill: #d9dadd;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 {
  background: none;
  fill: #8c40ef;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-9 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-9+.emotion-12 .emotion-16 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9:checked+svg .emotion-16 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-9:checked[aria-disabled='false'][aria-invalid='false']+.emotion-12 {
  fill: #8c40ef;
}

.emotion-9:checked[aria-disabled='true'][aria-invalid='false']+.emotion-12 {
  fill: #d8c5fc;
}

.emotion-9[aria-invalid='true']:not([aria-disabled='true'])+.emotion-12 {
  fill: #e51963;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #f1eefc;
}

.emotion-9[aria-disabled='false']:focus-visible+.emotion-12 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 .emotion-14 {
  fill: #ffebf2;
}

.emotion-11 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-11 .emotion-14 {
  fill: #ffffff;
}

.emotion-18 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-20[data-has-label='true'] {
  padding-left: 2rem;
}

.emotion-20[data-has-label='false'] {
  display: contents;
}

.emotion-20[data-has-default-cursor='true'] {
  cursor: default;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
        data-checked="false"
        data-disabled="false"
        data-error="true"
        data-has-default-cursor="false"
        data-has-label="true"
        data-image="none"
        data-type="radio"
        role="button"
        tabindex="0"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            aria-disabled="false"
            class="emotion-6 emotion-7 emotion-8"
            data-checked="false"
            data-error="true"
          >
            <input
              aria-disabled="false"
              aria-invalid="true"
              class="emotion-9 emotion-10"
              id="«rh»"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="emotion-11 emotion-12"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="emotion-13 emotion-14"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="emotion-15 emotion-16"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="emotion-17 emotion-18 emotion-19"
              for="«rh»"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="emotion-20 emotion-21"
          data-has-default-cursor="false"
          data-has-label="false"
        >
          Radio field error
        </div>
      </div>
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] .emotion-5,
.emotion-2[data-has-label='true'] .eqr7bqq1 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-7[aria-disabled='false'],
.emotion-7[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #e5dbfd;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffd3e3;
}

.emotion-7[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-7[aria-disabled='true']>label,
.emotion-7[aria-disabled='true'] .emotion-10 {
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-7[aria-disabled='true'] .emotion-12 .emotion-14 {
  fill: #f3f3f4;
}

.emotion-7[data-checked='true'] {
  color: #641cb3;
}

.emotion-7[data-error='true'] {
  color: #b3144d;
}

.emotion-7[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-7 input+svg {
  display: none;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 {
  fill: #d9dadd;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false']:not([data-checked='true']) .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 {
  fill: #8c40ef;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 {
  fill: #b3144d;
}

.emotion-7:hover[aria-disabled='false'] .emotion-10[aria-invalid='true']+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 {
  background: none;
  fill: #8c40ef;
}

.emotion-7 .emotion-10[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #ffffff;
}

.emotion-9 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-9+.emotion-12 .emotion-16 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-9:checked+svg .emotion-16 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-9:checked[aria-disabled='false'][aria-invalid='false']+.emotion-12 {
  fill: #8c40ef;
}

.emotion-9:checked[aria-disabled='true'][aria-invalid='false']+.emotion-12 {
  fill: #d8c5fc;
}

.emotion-9[aria-invalid='true']:not([aria-disabled='true'])+.emotion-12 {
  fill: #e51963;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-9[aria-disabled='false']:active+.emotion-12 .emotion-14 {
  fill: #f1eefc;
}

.emotion-9[aria-disabled='false']:focus-visible+.emotion-12 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-9[aria-invalid='true']:focus+.emotion-12 .emotion-14 {
  fill: #ffebf2;
}

.emotion-11 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-11 .emotion-14 {
  fill: #ffffff;
}

.emotion-18 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-20[data-has-label='true'] {
  padding-left: 2rem;
}

.emotion-20[data-has-label='false'] {
  display: contents;
}

.emotion-20[data-has-default-cursor='true'] {
  cursor: default;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-has-default-cursor="false"
        data-has-label="true"
        data-image="none"
        data-type="radio"
        role="button"
        tabindex="0"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            aria-disabled="false"
            class="emotion-6 emotion-7 emotion-8"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              class="emotion-9 emotion-10"
              id="«rd»"
              name="test"
              tabindex="-1"
              type="radio"
              value="events"
            />
            <svg
              class="emotion-11 emotion-12"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="emotion-13 emotion-14"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="emotion-15 emotion-16"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="emotion-17 emotion-18 emotion-19"
              for="«rd»"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="emotion-20 emotion-21"
          data-has-default-cursor="false"
          data-has-label="false"
        >
          Radio field events
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
